# kn-defaults

./: CHANGELOG.MD  LICENSE  README.md  runtests.py  setup.cfg
kn_defaults/logging/: __init__.py  app_settings.py  apps.py  checks.py  decorators.py  defaults.py  handlers.py  middlewares.py  utils.py
kn_defaults/project/: urls.py  wsgi.py
kn_defaults/styling/: __init__.py  apps.py  checks.py
kn_defaults/styling/management/commands/: copy_styling_conf.py
kn_defaults/utils/: README.md
tests/: test_settings.py  tests.py  urls.py  urls_w_default_admin.py
