[metadata]
license_file = LICENSE
version = attr: kn_defaults.__version__
name = django-kn-defaults
author = KUWAITNET
author_email = ramez@kuwaitnet.com
description = A collection of logging and helpers for KN.
long_description = file:README.md
long_description_content_type= text/markdown
url = https://github.com/KuwaitNET/kn-defaults
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires =
    django>=2.1
    simplejson
